--- a/public/package.json
+++ b/public/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "axois": "^0.0.1-security",
+    "firebase": "^9.8.1",
     "firebase-cli": "^1.2.0",
     "http": "^0.0.1-security",
     "moment": "^2.29.3",
