--- a/public/package.json
+++ b/public/package.json
@@ -1,8 +1,10 @@
 {
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.1.1",
     "axois": "^0.0.1-security",
     "firebase": "^9.8.1",
-    "firebase-cli": "^1.2.0",
+    "firebase-cli": "^0.0.4",
+    "fontawesome": "^5.6.3",
     "http": "^0.0.1-security",
     "moment": "^2.29.3",
     "soket.io": "^0.0.1-security"
@@ -13,10 +15,11 @@
   "name": "public",
   "version": "1.0.0",
   "description": "Project E-commence",
-  "main": "index.js",
+  "main": "firebase-messaging-sw.js",
   "scripts": {
     "test": "node ./js/firebase/firebaseProvider.js",
-    "dev": "nodemon ./js/firebase/firebaseProvider.js"
+    "dev": "nodemon ./js/firebase/firebaseProvider.js",
+    "messaging": "nodemon /public/firebase-messaging-sw.js"
   },
   "author": "Prince Obeng Donkor",
   "license": "MIT"
